feat: enhance UI/UX and clean up repository structure
Major improvements:
- Update Automotive Clear Coat preset as default with optimized values (angle: 171°, intensity: 1.0, blend: screen, band width: 50, phase: 2)
- Hide map CSS code blocks while preserving download functionality for cleaner UI
- Rename "Controls" tab to "Settings" and reorder options (Processing Mode, Max CSS File Size, Details, Compression)
- Hide posterization option from UI while maintaining functionality
- Increase generated CSS code block max-height to 100vh for better visibility

Plugin enhancements:
- Enable mapExtractor and lighting plugins by default
- Add comprehensive CSS variable definitions to lighting plugin for portable CSS generation
- Implement lifecycle hooks (beforeMaskLoaded, onMaskLoaded) for lighting plugin
- Add performance caching to prevent unnecessary re-calculations

Repository cleanup:
- Remove development artifacts from tracking (callback-system-demo.html, AGENTS.md, DEMO_GENERATION.md)
- Update .gitignore to exclude development files while preserving them locally

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,13 @@
 # AI Assistant files
 CLAUDE.md
+CLAUDE.local.md
 PROJECT_PROGRESS.md
+PROGRESS.md
+
+# Development artifacts and demos
+callback-system-demo.html
+AGENTS.md
+DEMO_GENERATION.md
 
 # OS generated files
 .DS_Store
